# vscode-legacy

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  log.txt  package.json  tsconfig.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: javascript.yml  rust.yml
extension_src/: extension.ts
extension_src/test/: runTest.ts
probe-rs-debugadapter/src/: main.rs
probe-rs-vscode/: package.json
probe-rs-vscode/src/: extension.ts
src/: debug_adapter.rs  debugger.rs  main.rs
tests/: integration_test.rs
tests/snapshots/: integration_test__basic_init_flow-2.snap  integration_test__basic_init_flow.snap
