[package]
name = "probe-rs-debugadapter"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
debugserver-types = "0.5.0"
serde_json = "1.0.51"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.8"
simplelog = "0.8.0"
clap = "2.33.0"

probe-rs = "0.7.1"


[dev-dependencies]
assert_cmd = "0.10"
insta = "0.16.0"
